--- a/styles/global.module.css
+++ b/styles/global.module.css
@@ -15,8 +15,8 @@
     justify-content: center;
     align-items: center;
     padding-top: 100px;
-    padding-left: 3%;
-    padding-right: 3%;
+    padding-left: 2%;
+    padding-right: 2%;
     width: 100%;
     height: fit-content;
     /* color: #fff; */
